Fixes: NB#176700  Labels are not visible in QtStyle Dialog Test and QtStyle Example apps until button is tapped
RevBy: Bernd Lamecker

--- a/base/meegotouch/libmeegotouchviews/style/mbuttoniconstyle.css
+++ b/base/meegotouch/libmeegotouchviews/style/mbuttoniconstyle.css
@@ -1,11 +1,6 @@
 /* MButtonIconStyle : MButtonStyle */
 MButtonIconStyle {
 
-    /* icon button has no background, so use regular text color
-       for the label, as this will be against default background */
-
-    text-color: $COLOR_FOREGROUND;
-
     glow-color: #FFFFFF;
     glow-duration: 800;
     glow-radius: 8;
